plain-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/sync-wave: "-3"
