plain-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-backend
  namespace: lms
spec:
  selector:
    app: lms-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
